The mechanism of downloading the video and then saving it on the client's computer is implemented. Without using ajax-query yet.

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <form action="{{ url_for('install_video') }}" method="POST">
                     <div class="inputs-area">
                         <input type="text" class="form-control" id="url-input" placeholder="Ссылка на видео...">
-                        <input type="submit" class="btn btn-success" id="submit-input" value="Скачать">
+                        <input type="submit" class="btn btn-success" id="submit-input" value="Скачать" disabled>
                     </div>
                 </form>
             </div>
